<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Login" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip" 
        android:layout_gravity="center">
        
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectlanguage" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/userName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:layout_weight="0.63"
            android:hint="@string/userNameHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/passWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/passWord"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/passWordInput"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:layout_weight="0.63"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:text="@string/logIn"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:text="@string/update"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>