<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1" 
        android:columnCount="2"
        >

        <Button
            android:id="@+id/alLo_chil_but"
            android:layout_gravity="fill"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/location_Children" />

        <Button
            android:id="@+id/alLo_loca_but"
            android:layout_column="0"
            android:layout_width="230dip"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/location_Location" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1" 
        android:columnCount="2" >
        
        <Button
            android:id="@+id/alLo_addN_but"
            android:layout_gravity="fill"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/location_add" />

        <EditText
            android:id="@+id/alLo_sear_txt"
            android:layout_column="0"
            android:layout_width="230dip"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:hint="@string/location_Search" />
    </GridLayout>
<ListView
        android:id="@+id/alLo_Loca_lst"
        android:layout_width="fill_parent"  
        android:layout_height="0dip"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:smoothScrollbar="true" />
</LinearLayout>
