<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="45dp"  
        android:orientation="horizontal"  
        android:weightSum="2" >  
  
        <Button  
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/edCh_save_but"
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_weight="1"
            android:text="@string/children_edit_save"/>  
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/edCh_canc_but"
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_weight="1"
            android:text="@string/children_edit_Cancel"/>
    </LinearLayout>  
    
<LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal"  
        android:weightSum="2" >  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_marginLeft="35dip"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:id="@+id/edCh_firs_lab"
			android:text="@string/children_edit_firstName"/>  
        <EditText  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/edCh_firs_txt"
            android:hint="@string/children_edit_firstName"
            />
    </LinearLayout>  
    
<LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal"  
        android:weightSum="2" >  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_marginLeft="35dip"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:id="@+id/edCh_last_lab"
			android:text="@string/children_edit_lastName"/>  
        <EditText  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/edCh_last_txt"
            android:hint="@string/children_edit_lastName"
            />
    </LinearLayout>  
    

<LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal"  
        android:weightSum="2" >  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_marginLeft="35dip"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:id="@+id/edCh_addr_lab"
			android:text="@string/children_edit_address"/>  
        <EditText  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/edCh_addr_txt"
            android:hint="@string/children_edit_address"
            />
    </LinearLayout>  
    

<LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal"  
        android:weightSum="2" >  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_marginLeft="35dip"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:id="@+id/edCh_phon_lab"
			android:text="@string/children_edit_phone"/>  
        <EditText  
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/edCh_phon_txt"
            android:hint="@string/children_edit_phone"
            />
    </LinearLayout>

<Button
    android:id="@+id/edCh_Remo_but"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/children_edit_Remove" />
    
</LinearLayout>
